# dxProjectAssembleLegos

./: .gitignore  CMakeLists.txt  demo.cpp  demo.cpp.orig  demo.h  demo.h.orig  dxKinMuJoCo.cpp  dxKinMuJoCo.cpp.orig  dxKinMuJoCo.h  dxKinMujo.cpp  dxKinMujo.h  dxMuJoCoRealSense.cpp  dxMuJoCoRealSense.h  dxMuJoCoRobotSimulator.cpp  dxMuJoCoRobotSimulator.h  dxMuJoCoRobotState.h  dxMuJoCoRobotViewer.cpp  dxMuJoCoRobotViewer.h  dxMuJoCoWindow.cpp  dxMuJoCoWindow.cpp.orig  dxMuJoCoWindow.h  dxMuJoCoWindow.h.orig  dxMujocoInterface.cpp  dxMujocoInterface.h  dxPlannerSimple.cpp  dxPlannerSimple.cpp.orig  dxPlannerSimple.h  dxPlannerSimple.h.orig  dxRobotPickAndPlace.cpp  dxRobotPickAndPlace.h  dxRobotSimulator.cpp  dxRobotSimulator.cpp.orig  dxRobotSimulator.h  dxRobotSimulator.h.orig  dxRobotViewerFactory.cpp  dxRobotViewerFactory.h  dxVision.cpp  dxVision.h  main.cpp  mainwindow.cpp  (+3 more)
OLD_Models/: iiwa14_allegro_right_scene.xml  ur10e_2f85_scene.xml  ur10e_2f85_scene_actuated.xml
OLD_Models/robotiq_hande/: README.md
cmake/: FindMuJoCo.cmake  FindVISP.cmake
models/: ur10e_2f85_scene.xml  ur10e_2f85_scene_actuated.xml  ur10e_hande_scene.xml  ur10e_hande_workbench_scene.xml  ur10e_hande_workbench_scene_lego_2x2.xml  ur10e_hande_workbench_scene_lego_2x2_noscale.xml  ur10e_onrobot_2fg7_workbench_scene_lego_2x2.xml
models/OnRobot_2FG7_Gripper/: gripper.xml  onrobot_2fg7_actuators.xml  onrobot_2fg7_tendon.xml  scene.xml
models/OnRobot_2FG7_Gripper/assets/: Base.stl  LeftFingerBody.stl  LeftFingerPad.stl  LeftFingerPad_Coll.stl  RightFingerBody.stl  RightFingerPad.stl  RightFingerPad_Coll.stl
models/lego/: scene.xml
models/lego/assets/: brick_1x1.STL  lego_2x2_blue.pcd  lego_2x2_centered_blue.ply  lego_2x2_centered_green.ply  lego_2x2_centered_red.ply  lego_2x2_centered_white.ply  lego_2x2_centered_yellow.ply  lego_2x2_green.pcd  lego_2x2_red.pcd  lego_2x2_white.pcd  lego_2x2_yellow.pcd  legocloud.pcd
models/models/: ur10e_2f85_scene.xml
models/robotiq_hande/: hande.xml
old_code/: dxRobotViewerFactory.cpp  dxRobotViewerFactory.h
